--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/3rdparty/glfw)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(${CMAKE_CURRENT_LIST_DIR}/src/3rdparty/glfw/deps)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/src/3rdparty/glad/include)
 
 set(SOURCE_FILES
         src/main.cpp src/ray.h src/hitables/hitable.h src/hitables/sphere.cpp src/hitables/sphere.h
         src/hitables/hitable_list.cpp src/hitables/hitable_list.h src/camera.h src/materials/material.h
         src/materials/lambertian.h src/utils.h src/materials/metal.h src/materials/dialectric.h
         src/output/output_window.cpp src/output/output_window.h
-        src/3rdparty/glfw/deps/glad.c)
+        src/3rdparty/glad/src/glad.c src/hitables/moving_sphere.cpp src/hitables/moving_sphere.h)
 
 add_executable(raytracer ${SOURCE_FILES})
 
