Tried adding debug output, didn't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(SOURCE_FILES
         src/camera.h src/materials/material.h
         src/materials/lambertian.h src/utils.h src/materials/metal.h src/materials/dialectric.h
         src/gl/output_window.cpp src/gl/output_window.h
-        src/3rdparty/glad/src/glad.c src/hitables/moving_sphere.h src/bvh/aabb.h src/hitables/bvh_node.h src/hitables/bvh_node.cpp src/utils.cpp src/gl/wireframe_renderer.cpp src/gl/wireframe_renderer.h)
+        src/3rdparty/glad/src/glad.c src/hitables/moving_sphere.h src/bvh/aabb.h src/hitables/bvh_node.h src/hitables/bvh_node.cpp src/utils.cpp src/gl/wireframe_renderer.cpp src/gl/wireframe_renderer.h src/bvh/aabb.cpp src/hitables/moving_sphere.cpp src/camera.cpp)
 
 add_executable(raytracer ${SOURCE_FILES})
 
